# CNN_Classifier_template

./: LICENSE  README.md  setup.cfg  setup.py  template.py
reseach/: trials.ipynb
