[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3  # It will help you to run unit test and integration test
    mypy>=0.971 # it helps to check if there is typing error or not
    flake8>=5.0.4  # to check if there are mistakes in the script( like sometimes extra space)
    tox>=3.25.1  # tox will help to create different working environment and to test application locally
    black>=22.8.0  # used for formatting your application , to test if the code written is following correct python structure

[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py